--- a/pages/about.html
+++ b/pages/about.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-permalink: /about/
+permalink: about/
 ---
 
 {% include header.html %}
@@ -15,7 +15,7 @@ permalink: /about/
 					<hr class="short">
 				</div>
 				<div class="body-copy">					
-					<p><img src="{{ "/assets/img/bg-about.jpg" | relative_url }}" alt=""></p>
+					<p><img src="{{ "assets/img/bg-about.jpg" | relative_url }}" alt=""></p>
 					<p>Kami adalah produsen souvenir dan merchandise, kami menawarkan harga yang terjangkau dengan kualitas terbaik. Kami memproduksi PIN dan gantungan kunci. Selain itu kami juga memproduksi MUG, Pakaian serta berbagai souvenir &amp; merchandise lainnya.</p>
 				</div>
 			</div>
