--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-permalink: /contact/
+permalink: contact/
 ---
 
 {% include header.html %}
@@ -44,7 +44,7 @@ permalink: /contact/
 							WA: 0853-6100-5250
 						</address>
 
-						<a href="https://api.whatsapp.com/send?phone=6285361005250&text=Mau%20pesan%20Bahan%20Baku%20PINnya%20gan...">Order Now</a>
+						<a href="http://whatsapp.adiradjapin.com">Order Now</a>
 					</div>
 				</div>
 			</div>
