--- a/pages/shop.html
+++ b/pages/shop.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-permalink: /shop/
+permalink: shop/
 ---
 
 {% include header.html %}
@@ -14,7 +14,7 @@ permalink: /shop/
 				<h2>PIN GANCI</h2>
 				<div class="accent">
 					<span class="top"></span>
-					<a href="{{ "/shop/pin-ganci/" | relative_url }}" class="bottom">
+					<a href="{{ "shop/pin-ganci/" | relative_url }}" class="bottom">
 						show all
 					</a>
 				</div>
@@ -22,14 +22,14 @@ permalink: /shop/
 			</div>
 			<div class="col-12 shop-label">
 				<h5>PIN Ganci</h5>
-				<a href="{{ "/shop/pin-ganci/" | relative_url }}" class="btn btn-link">Show All</a>
+				<a href="{{ "shop/pin-ganci/" | relative_url }}" class="btn btn-link">Show All</a>
 			</div>
 			<div class="col-lg-10 col-md-12 col-sm-12 shop-items">
 				<div class="row">
 					<div class="col-lg-3 col-sm-6 item-unit">
 						<a href="#" class="item">
 							<div class="thumb">
-								<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
+								<img src="{{ "assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
 								<span class="cat">Pin</span>
 								<div class="overlay"></div>
 							</div>
@@ -40,7 +40,7 @@ permalink: /shop/
 					<div class="col-lg-3 col-sm-6 item-unit">
 						<a href="#" class="item">
 							<div class="thumb">
-								<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
+								<img src="{{ "assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
 								<span class="cat">Pin</span>
 								<div class="overlay"></div>
 							</div>
@@ -51,7 +51,7 @@ permalink: /shop/
 					<div class="col-lg-3 col-sm-6 item-unit">
 						<a href="#" class="item">
 							<div class="thumb">
-								<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
+								<img src="{{ "assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
 								<span class="cat">Ganci</span>
 								<div class="overlay"></div>
 							</div>
@@ -62,7 +62,7 @@ permalink: /shop/
 					<div class="col-lg-3 col-sm-6 item-unit">
 						<a href="#" class="item">
 							<div class="thumb">
-								<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
+								<img src="{{ "assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
 								<span class="cat">Ganci</span>
 								<div class="overlay"></div>
 							</div>
@@ -79,7 +79,7 @@ permalink: /shop/
 				<h2>MUG</h2>
 				<div class="accent">
 					<span class="top"></span>
-					<a href="{{ "/shop/mug/" | relative_url }}" class="bottom">
+					<a href="{{ "shop/mug/" | relative_url }}" class="bottom">
 						show all
 					</a>
 				</div>
@@ -87,14 +87,14 @@ permalink: /shop/
 			</div>
 			<div class="col-12 shop-label">
 				<h5>Mug</h5>
-				<a href="{{ "/shop/mug/" | relative_url }}" class="btn btn-link">Show All</a>
+				<a href="{{ "shop/mug/" | relative_url }}" class="btn btn-link">Show All</a>
 			</div>
 			<div class="col-lg-10 col-md-12 col-sm-12 shop-items">
 				<div class="row">
 					<div class="col-lg-3 col-sm-6 item-unit">
 						<a href="#" class="item">
 							<div class="thumb">
-								<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
+								<img src="{{ "assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
 								<span class="cat">mug</span>
 								<div class="overlay"></div>
 							</div>
@@ -105,7 +105,7 @@ permalink: /shop/
 					<div class="col-lg-3 col-sm-6 item-unit">
 						<a href="#" class="item">
 							<div class="thumb">
-								<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
+								<img src="{{ "assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
 								<span class="cat">mug</span>
 								<div class="overlay"></div>
 							</div>
@@ -116,7 +116,7 @@ permalink: /shop/
 					<div class="col-lg-3 col-sm-6 item-unit">
 						<a href="#" class="item">
 							<div class="thumb">
-								<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
+								<img src="{{ "assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
 								<span class="cat">Pin</span>
 								<div class="overlay"></div>
 							</div>
@@ -127,7 +127,7 @@ permalink: /shop/
 					<div class="col-lg-3 col-sm-6 item-unit">
 						<a href="#" class="item">
 							<div class="thumb">
-								<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
+								<img src="{{ "assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
 								<span class="cat">Pin</span>
 								<div class="overlay"></div>
 							</div>
