--- a/contact/index.html
+++ b/contact/index.html
@@ -141,7 +141,7 @@
 							WA: 0853-6100-5250
 						</address>
 
-						<a href="https://api.whatsapp.com/send?phone=6285361005250&text=Mau%20pesan%20Bahan%20Baku%20PINnya%20gan...">Order Now</a>
+						<a href="http://whatsapp.adiradjapin.com">Order Now</a>
 					</div>
 				</div>
 			</div>
