--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 	<div class="container">
 		<div class="text-hero">
 			<h1>Produsen souvenir and merchandise.</h1>
-			<a href="http://api.whatsapp.com/send?phone=6285361005250&text=Mau pesan Bahan Baku PINnya gan..." class="btn btn-icon"><i class="icon-whatsapp"></i> Order Now</a>
+			<a href="http://whatsapp.adiradjapin.com" class="btn btn-icon"><i class="icon-whatsapp"></i> Order Now</a>
 			<a href="/shop/" class="btn btn-bg-red">shop the product &rsaquo;</a>
 		</div>
 	</div>
