update url lagi

--- a/pages/shop-mug.html
+++ b/pages/shop-mug.html
@@ -13,7 +13,7 @@ permalink: shop/mug/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="{{ "assets/img/mug/shop.jpg" | relative_url }}" alt="">
+						<img src="assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -24,7 +24,7 @@ permalink: shop/mug/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="{{ "assets/img/mug/shop.jpg" | relative_url }}" alt="">
+						<img src="assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -35,7 +35,7 @@ permalink: shop/mug/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="{{ "assets/img/mug/shop.jpg" | relative_url }}" alt="">
+						<img src="assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -46,7 +46,7 @@ permalink: shop/mug/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="{{ "assets/img/mug/shop.jpg" | relative_url }}" alt="">
+						<img src="assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -57,7 +57,7 @@ permalink: shop/mug/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="{{ "assets/img/mug/shop.jpg" | relative_url }}" alt="">
+						<img src="assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -68,7 +68,7 @@ permalink: shop/mug/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="{{ "assets/img/mug/shop.jpg" | relative_url }}" alt="">
+						<img src="assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -79,7 +79,7 @@ permalink: shop/mug/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="{{ "assets/img/mug/shop.jpg" | relative_url }}" alt="">
+						<img src="assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -90,7 +90,7 @@ permalink: shop/mug/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="{{ "assets/img/mug/shop.jpg" | relative_url }}" alt="">
+						<img src="assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -101,7 +101,7 @@ permalink: shop/mug/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="{{ "assets/img/mug/shop.jpg" | relative_url }}" alt="">
+						<img src="assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -112,7 +112,7 @@ permalink: shop/mug/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="{{ "assets/img/mug/shop.jpg" | relative_url }}" alt="">
+						<img src="assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
