update url lagi

--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@
         <link rel="icon" type="image/png" href="ico/favicon-32x32.png" sizes="32x32" />
         <link rel="icon" type="image/png" href="ico/favicon-16x16.png" sizes="16x16" />
 
-        <link rel="stylesheet" href="/assets/css/main.css">
+        <link rel="stylesheet" href="assets/css/main.css">
     </head>
     <body>
         <!--[if lte IE 9]>
@@ -92,7 +92,7 @@
 				<span>BAHAN BAKU PIN and MATERIAL PIN</span>
 				<nav>
 					<ul>
-						<li class="shop"><a href="/shop/" title="shop adiradjapin">shop</a></li>
+						<li class="shop"><a href="shop/" title="shop adiradjapin">shop</a></li>
 						<li><a href="https://twitter.com/adiradjapin" target="_blank" title="twitter adiradjapin"><i class="icon-twitter"></i></a></li>
 						<li><a href="https://instagram.com/adiradjapin" target="_blank" title="instagram adiradjapin"><i class="icon-instagram"></i></a></li>
 					</ul>
@@ -112,7 +112,7 @@
 					<hr class="short">
 				</div>
 				<div class="body-copy">					
-					<p><img src="/assets/img/bg-about.jpg" alt=""></p>
+					<p><img src="assets/img/bg-about.jpg" alt=""></p>
 					<p>Kami adalah produsen souvenir dan merchandise, kami menawarkan harga yang terjangkau dengan kualitas terbaik. Kami memproduksi PIN dan gantungan kunci. Selain itu kami juga memproduksi MUG, Pakaian serta berbagai souvenir &amp; merchandise lainnya.</p>
 				</div>
 			</div>
@@ -126,12 +126,12 @@
 		<p class="footer-menu left">
 			<a href="/">Home</a>
 			<span class="slash">/</span>
-			<a href="/shop/">Shop</a>
+			<a href="shop/">Shop</a>
 		</p>
 		<p class="footer-menu right">
-			<a href="/about/">About Us</a>
+			<a href="about/">About Us</a>
 			<span class="slash">/</span>
-			<a href="/contact/">Contact Us</a>
+			<a href="contact/">Contact Us</a>
 		</p>
 		<div class="footer-love">
 			<svg class="icon-bandung">
@@ -173,10 +173,10 @@
 	</div>
 </footer>
 
-        <script src="/assets/js/vendor/modernizr-3.5.0.min.js"></script>
-        <script src="/assets/js/vendor/jquery-3.2.1.min.js"></script>
-        <script src="/assets/js/instafeed.min.js"></script>
-        <script src="/assets/js/main.js"></script>
+        <script src="assets/js/vendor/modernizr-3.5.0.min.js"></script>
+        <script src="assets/js/vendor/jquery-3.2.1.min.js"></script>
+        <script src="assets/js/instafeed.min.js"></script>
+        <script src="assets/js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
         <!-- <script>
