--- a/shop/index.html
+++ b/shop/index.html
@@ -15,7 +15,7 @@
         <link rel="icon" type="image/png" href="ico/favicon-32x32.png" sizes="32x32" />
         <link rel="icon" type="image/png" href="ico/favicon-16x16.png" sizes="16x16" />
 
-        <link rel="stylesheet" href="/assets/css/main.css">
+        <link rel="stylesheet" href="assets/css/main.css">
     </head>
     <body>
         <!--[if lte IE 9]>
@@ -92,7 +92,7 @@
 				<span>BAHAN BAKU PIN and MATERIAL PIN</span>
 				<nav>
 					<ul>
-						<li class="shop"><a href="/shop/" title="shop adiradjapin">shop</a></li>
+						<li class="shop"><a href="shop/" title="shop adiradjapin">shop</a></li>
 						<li><a href="https://twitter.com/adiradjapin" target="_blank" title="twitter adiradjapin"><i class="icon-twitter"></i></a></li>
 						<li><a href="https://instagram.com/adiradjapin" target="_blank" title="instagram adiradjapin"><i class="icon-instagram"></i></a></li>
 					</ul>
@@ -111,7 +111,7 @@
 				<h2>PIN GANCI</h2>
 				<div class="accent">
 					<span class="top"></span>
-					<a href="/shop/pin-ganci/" class="bottom">
+					<a href="shop/pin-ganci/" class="bottom">
 						show all
 					</a>
 				</div>
@@ -119,14 +119,14 @@
 			</div>
 			<div class="col-12 shop-label">
 				<h5>PIN Ganci</h5>
-				<a href="/shop/pin-ganci/" class="btn btn-link">Show All</a>
+				<a href="shop/pin-ganci/" class="btn btn-link">Show All</a>
 			</div>
 			<div class="col-lg-10 col-md-12 col-sm-12 shop-items">
 				<div class="row">
 					<div class="col-lg-3 col-sm-6 item-unit">
 						<a href="#" class="item">
 							<div class="thumb">
-								<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+								<img src="assets/img/pin_ganci/shop.jpg" alt="">
 								<span class="cat">Pin</span>
 								<div class="overlay"></div>
 							</div>
@@ -137,7 +137,7 @@
 					<div class="col-lg-3 col-sm-6 item-unit">
 						<a href="#" class="item">
 							<div class="thumb">
-								<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+								<img src="assets/img/pin_ganci/shop.jpg" alt="">
 								<span class="cat">Pin</span>
 								<div class="overlay"></div>
 							</div>
@@ -148,7 +148,7 @@
 					<div class="col-lg-3 col-sm-6 item-unit">
 						<a href="#" class="item">
 							<div class="thumb">
-								<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+								<img src="assets/img/pin_ganci/shop.jpg" alt="">
 								<span class="cat">Ganci</span>
 								<div class="overlay"></div>
 							</div>
@@ -159,7 +159,7 @@
 					<div class="col-lg-3 col-sm-6 item-unit">
 						<a href="#" class="item">
 							<div class="thumb">
-								<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+								<img src="assets/img/pin_ganci/shop.jpg" alt="">
 								<span class="cat">Ganci</span>
 								<div class="overlay"></div>
 							</div>
@@ -176,7 +176,7 @@
 				<h2>MUG</h2>
 				<div class="accent">
 					<span class="top"></span>
-					<a href="/shop/mug/" class="bottom">
+					<a href="shop/mug/" class="bottom">
 						show all
 					</a>
 				</div>
@@ -184,14 +184,14 @@
 			</div>
 			<div class="col-12 shop-label">
 				<h5>Mug</h5>
-				<a href="/shop/mug/" class="btn btn-link">Show All</a>
+				<a href="shop/mug/" class="btn btn-link">Show All</a>
 			</div>
 			<div class="col-lg-10 col-md-12 col-sm-12 shop-items">
 				<div class="row">
 					<div class="col-lg-3 col-sm-6 item-unit">
 						<a href="#" class="item">
 							<div class="thumb">
-								<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+								<img src="assets/img/pin_ganci/shop.jpg" alt="">
 								<span class="cat">mug</span>
 								<div class="overlay"></div>
 							</div>
@@ -202,7 +202,7 @@
 					<div class="col-lg-3 col-sm-6 item-unit">
 						<a href="#" class="item">
 							<div class="thumb">
-								<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+								<img src="assets/img/pin_ganci/shop.jpg" alt="">
 								<span class="cat">mug</span>
 								<div class="overlay"></div>
 							</div>
@@ -213,7 +213,7 @@
 					<div class="col-lg-3 col-sm-6 item-unit">
 						<a href="#" class="item">
 							<div class="thumb">
-								<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+								<img src="assets/img/pin_ganci/shop.jpg" alt="">
 								<span class="cat">Pin</span>
 								<div class="overlay"></div>
 							</div>
@@ -224,7 +224,7 @@
 					<div class="col-lg-3 col-sm-6 item-unit">
 						<a href="#" class="item">
 							<div class="thumb">
-								<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+								<img src="assets/img/pin_ganci/shop.jpg" alt="">
 								<span class="cat">Pin</span>
 								<div class="overlay"></div>
 							</div>
@@ -243,12 +243,12 @@
 		<p class="footer-menu left">
 			<a href="/">Home</a>
 			<span class="slash">/</span>
-			<a href="/shop/">Shop</a>
+			<a href="shop/">Shop</a>
 		</p>
 		<p class="footer-menu right">
-			<a href="/about/">About Us</a>
+			<a href="about/">About Us</a>
 			<span class="slash">/</span>
-			<a href="/contact/">Contact Us</a>
+			<a href="contact/">Contact Us</a>
 		</p>
 		<div class="footer-love">
 			<svg class="icon-bandung">
@@ -291,10 +291,10 @@
 </footer>
 
 
-        <script src="/assets/js/vendor/modernizr-3.5.0.min.js"></script>
-        <script src="/assets/js/vendor/jquery-3.2.1.min.js"></script>
-        <script src="/assets/js/instafeed.min.js"></script>
-        <script src="/assets/js/main.js"></script>
+        <script src="assets/js/vendor/modernizr-3.5.0.min.js"></script>
+        <script src="assets/js/vendor/jquery-3.2.1.min.js"></script>
+        <script src="assets/js/instafeed.min.js"></script>
+        <script src="assets/js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
         <!-- <script>
