--- a/shop/mug/index.html
+++ b/shop/mug/index.html
@@ -15,7 +15,7 @@
         <link rel="icon" type="image/png" href="ico/favicon-32x32.png" sizes="32x32" />
         <link rel="icon" type="image/png" href="ico/favicon-16x16.png" sizes="16x16" />
 
-        <link rel="stylesheet" href="/assets/css/main.css">
+        <link rel="stylesheet" href="assets/css/main.css">
     </head>
     <body>
         <!--[if lte IE 9]>
@@ -92,7 +92,7 @@
 				<span>BAHAN BAKU PIN and MATERIAL PIN</span>
 				<nav>
 					<ul>
-						<li class="shop"><a href="/shop/" title="shop adiradjapin">shop</a></li>
+						<li class="shop"><a href="shop/" title="shop adiradjapin">shop</a></li>
 						<li><a href="https://twitter.com/adiradjapin" target="_blank" title="twitter adiradjapin"><i class="icon-twitter"></i></a></li>
 						<li><a href="https://instagram.com/adiradjapin" target="_blank" title="instagram adiradjapin"><i class="icon-instagram"></i></a></li>
 					</ul>
@@ -110,7 +110,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/mug/shop.jpg" alt="">
+						<img src="assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -121,7 +121,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/mug/shop.jpg" alt="">
+						<img src="assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -132,7 +132,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/mug/shop.jpg" alt="">
+						<img src="assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -143,7 +143,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/mug/shop.jpg" alt="">
+						<img src="assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -154,7 +154,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/mug/shop.jpg" alt="">
+						<img src="assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -165,7 +165,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/mug/shop.jpg" alt="">
+						<img src="assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -176,7 +176,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/mug/shop.jpg" alt="">
+						<img src="assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -187,7 +187,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/mug/shop.jpg" alt="">
+						<img src="assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -198,7 +198,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/mug/shop.jpg" alt="">
+						<img src="assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -209,7 +209,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/mug/shop.jpg" alt="">
+						<img src="assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -312,12 +312,12 @@
 		<p class="footer-menu left">
 			<a href="/">Home</a>
 			<span class="slash">/</span>
-			<a href="/shop/">Shop</a>
+			<a href="shop/">Shop</a>
 		</p>
 		<p class="footer-menu right">
-			<a href="/about/">About Us</a>
+			<a href="about/">About Us</a>
 			<span class="slash">/</span>
-			<a href="/contact/">Contact Us</a>
+			<a href="contact/">Contact Us</a>
 		</p>
 		<div class="footer-love">
 			<svg class="icon-bandung">
@@ -359,10 +359,10 @@
 	</div>
 </footer>
 
-        <script src="/assets/js/vendor/modernizr-3.5.0.min.js"></script>
-        <script src="/assets/js/vendor/jquery-3.2.1.min.js"></script>
-        <script src="/assets/js/instafeed.min.js"></script>
-        <script src="/assets/js/main.js"></script>
+        <script src="assets/js/vendor/modernizr-3.5.0.min.js"></script>
+        <script src="assets/js/vendor/jquery-3.2.1.min.js"></script>
+        <script src="assets/js/instafeed.min.js"></script>
+        <script src="assets/js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
         <!-- <script>
