--- a/shop/pin-ganci/index.html
+++ b/shop/pin-ganci/index.html
@@ -15,7 +15,7 @@
         <link rel="icon" type="image/png" href="ico/favicon-32x32.png" sizes="32x32" />
         <link rel="icon" type="image/png" href="ico/favicon-16x16.png" sizes="16x16" />
 
-        <link rel="stylesheet" href="/assets/css/main.css">
+        <link rel="stylesheet" href="assets/css/main.css">
     </head>
     <body>
         <!--[if lte IE 9]>
@@ -92,7 +92,7 @@
 				<span>BAHAN BAKU PIN and MATERIAL PIN</span>
 				<nav>
 					<ul>
-						<li class="shop"><a href="/shop/" title="shop adiradjapin">shop</a></li>
+						<li class="shop"><a href="shop/" title="shop adiradjapin">shop</a></li>
 						<li><a href="https://twitter.com/adiradjapin" target="_blank" title="twitter adiradjapin"><i class="icon-twitter"></i></a></li>
 						<li><a href="https://instagram.com/adiradjapin" target="_blank" title="instagram adiradjapin"><i class="icon-instagram"></i></a></li>
 					</ul>
@@ -115,7 +115,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
@@ -126,7 +126,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
@@ -137,7 +137,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
@@ -148,7 +148,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
@@ -159,7 +159,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
@@ -170,7 +170,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
@@ -181,7 +181,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
@@ -192,7 +192,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
@@ -203,7 +203,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
@@ -214,7 +214,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
@@ -234,7 +234,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -246,7 +246,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -258,7 +258,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -270,7 +270,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -282,7 +282,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -294,7 +294,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -306,7 +306,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -318,7 +318,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -330,7 +330,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -342,7 +342,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -354,7 +354,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -366,7 +366,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -530,12 +530,12 @@
 		<p class="footer-menu left">
 			<a href="/">Home</a>
 			<span class="slash">/</span>
-			<a href="/shop/">Shop</a>
+			<a href="shop/">Shop</a>
 		</p>
 		<p class="footer-menu right">
-			<a href="/about/">About Us</a>
+			<a href="about/">About Us</a>
 			<span class="slash">/</span>
-			<a href="/contact/">Contact Us</a>
+			<a href="contact/">Contact Us</a>
 		</p>
 		<div class="footer-love">
 			<svg class="icon-bandung">
@@ -577,10 +577,10 @@
 	</div>
 </footer>
 
-        <script src="/assets/js/vendor/modernizr-3.5.0.min.js"></script>
-        <script src="/assets/js/vendor/jquery-3.2.1.min.js"></script>
-        <script src="/assets/js/instafeed.min.js"></script>
-        <script src="/assets/js/main.js"></script>
+        <script src="assets/js/vendor/modernizr-3.5.0.min.js"></script>
+        <script src="assets/js/vendor/jquery-3.2.1.min.js"></script>
+        <script src="assets/js/instafeed.min.js"></script>
+        <script src="assets/js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
         <!-- <script>
