--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="icon" type="image/png" href="ico/favicon-32x32.png" sizes="32x32" />
         <link rel="icon" type="image/png" href="ico/favicon-16x16.png" sizes="16x16" />
 
-        <link rel="stylesheet" href="/assets/css/main.css">
+        <link rel="stylesheet" href="assets/css/main.css">
     </head>
     <body>
         <!--[if lte IE 9]>
@@ -93,7 +93,7 @@
 				<span>BAHAN BAKU PIN and MATERIAL PIN</span>
 				<nav>
 					<ul>
-						<li class="shop"><a href="/shop/" title="shop adiradjapin">shop</a></li>
+						<li class="shop"><a href="shop/" title="shop adiradjapin">shop</a></li>
 						<li><a href="https://twitter.com/adiradjapin" target="_blank" title="twitter adiradjapin"><i class="icon-twitter"></i></a></li>
 						<li><a href="https://instagram.com/adiradjapin" target="_blank" title="instagram adiradjapin"><i class="icon-instagram"></i></a></li>
 					</ul>
@@ -107,7 +107,7 @@
 		<div class="text-hero">
 			<h1>Produsen souvenir and merchandise.</h1>
 			<a href="http://whatsapp.adiradjapin.com" class="btn btn-icon"><i class="icon-whatsapp"></i> Order Now</a>
-			<a href="/shop/" class="btn btn-bg-red">shop the product &rsaquo;</a>
+			<a href="shop/" class="btn btn-bg-red">shop the product &rsaquo;</a>
 		</div>
 	</div>
 
@@ -119,13 +119,13 @@
 		<div class="section-title">
 			<h3>Products</h3>
 			<span class="devider"></span>
-			<a href="/shop/" class="caps">see all &rsaquo;</a>
+			<a href="shop/" class="caps">see all &rsaquo;</a>
 		</div>
 		<div class="row">			
 			<div class="col-lg-3 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -136,7 +136,7 @@
 			<div class="col-lg-3 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -147,7 +147,7 @@
 			<div class="col-lg-3 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -158,7 +158,7 @@
 			<div class="col-lg-3 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -171,7 +171,7 @@
 			<div class="col-lg-3 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/mug/shop.jpg" alt="">
+						<img src="assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -182,7 +182,7 @@
 			<div class="col-lg-3 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/mug/shop.jpg" alt="">
+						<img src="assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -193,7 +193,7 @@
 			<div class="col-lg-3 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/mug/shop.jpg" alt="">
+						<img src="assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -204,7 +204,7 @@
 			<div class="col-lg-3 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="/assets/img/mug/shop.jpg" alt="">
+						<img src="assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -214,7 +214,7 @@
 			</div>
 		</div>
 		<div class="cta">
-			<a href="/shop/" class="btn btn-large btn-secondary">shop the product &rsaquo;</a>
+			<a href="shop/" class="btn btn-large btn-secondary">shop the product &rsaquo;</a>
 		</div>
 	</div>
 
@@ -227,7 +227,7 @@
 			<div class="text-pad">
 				<h1 class="no-m">About AdiRadjaPin</h1>
 				<p>Kami adalah produsen souvenir dan merchandise, kami menawarkan harga yang terjangkau dengan kualitas terbaik.</p>
-				<a href="/about/" class="btn btn-white-outline">Read Our Story &rsaquo;</a>
+				<a href="about/" class="btn btn-white-outline">Read Our Story &rsaquo;</a>
 			</div>
 		</div>
 	</div>
@@ -311,7 +311,7 @@
 		<ul id="instafeed" class="clearfix unstyled">
 			<li class="default">
 				<a href="https://www.instagram.com/adiradjapin/" target="_blank" title="Follow adiradjapin">
-					<img src="/assets/img/insta-promo.jpg" alt="">
+					<img src="assets/img/insta-promo.jpg" alt="">
 				</a>
 			</li>
 		</ul>
@@ -324,12 +324,12 @@
 		<p class="footer-menu left">
 			<a href="/">Home</a>
 			<span class="slash">/</span>
-			<a href="/shop/">Shop</a>
+			<a href="shop/">Shop</a>
 		</p>
 		<p class="footer-menu right">
-			<a href="/about/">About Us</a>
+			<a href="about/">About Us</a>
 			<span class="slash">/</span>
-			<a href="/contact/">Contact Us</a>
+			<a href="contact/">Contact Us</a>
 		</p>
 		<div class="footer-love">
 			<svg class="icon-bandung">
@@ -371,10 +371,10 @@
 	</div>
 </footer>
 
-        <script src="/assets/js/vendor/modernizr-3.5.0.min.js"></script>
-        <script src="/assets/js/vendor/jquery-3.2.1.min.js"></script>
-        <script src="/assets/js/instafeed.min.js"></script>
-        <script src="/assets/js/main.js"></script>
+        <script src="assets/js/vendor/modernizr-3.5.0.min.js"></script>
+        <script src="assets/js/vendor/jquery-3.2.1.min.js"></script>
+        <script src="assets/js/instafeed.min.js"></script>
+        <script src="assets/js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
         <!-- <script>
