--- a/pages/shop.html
+++ b/pages/shop.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-permalink: shop/
+permalink: /shop/
 ---
 
 {% include header.html %}
@@ -14,7 +14,7 @@ permalink: shop/
 				<h2>PIN GANCI</h2>
 				<div class="accent">
 					<span class="top"></span>
-					<a href="shop/pin-ganci/" class="bottom">
+					<a href="/shop/pin-ganci/" class="bottom">
 						show all
 					</a>
 				</div>
@@ -22,7 +22,7 @@ permalink: shop/
 			</div>
 			<div class="col-12 shop-label">
 				<h5>PIN Ganci</h5>
-				<a href="shop/pin-ganci/" class="btn btn-link">Show All</a>
+				<a href="/shop/pin-ganci/" class="btn btn-link">Show All</a>
 			</div>
 			<div class="col-lg-10 col-md-12 col-sm-12 shop-items">
 				<div class="row">
@@ -79,7 +79,7 @@ permalink: shop/
 				<h2>MUG</h2>
 				<div class="accent">
 					<span class="top"></span>
-					<a href="shop/mug/" class="bottom">
+					<a href="/shop/mug/" class="bottom">
 						show all
 					</a>
 				</div>
@@ -87,7 +87,7 @@ permalink: shop/
 			</div>
 			<div class="col-12 shop-label">
 				<h5>Mug</h5>
-				<a href="shop/mug/" class="btn btn-link">Show All</a>
+				<a href="/shop/mug/" class="btn btn-link">Show All</a>
 			</div>
 			<div class="col-lg-10 col-md-12 col-sm-12 shop-items">
 				<div class="row">
