--- a/shop/index.html
+++ b/shop/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Kami adalah produsen souvenir dan merchandise,  kami menawarkan harga yang terjangkau dengan kualitas terbaik.  Kami memproduksi PIN dan gantungan kunci.  Selain itu kami juga memproduksi MUG, Pakaian serta  berbagai souvenir &amp; merchandise lainnya.">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <script src="https://use.typekit.net/ppe4usu.js"></script>
+        <script src="http://use.typekit.net/ppe4usu.js"></script>
         <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
         <link rel="manifest" href="site.webmanifest">
@@ -92,7 +92,7 @@
 				<span>BAHAN BAKU PIN and MATERIAL PIN</span>
 				<nav>
 					<ul>
-						<li class="shop"><a href="shop/" title="shop adiradjapin">shop</a></li>
+						<li class="shop"><a href="/shop/" title="shop adiradjapin">shop</a></li>
 						<li><a href="https://twitter.com/adiradjapin" target="_blank" title="twitter adiradjapin"><i class="icon-twitter"></i></a></li>
 						<li><a href="https://instagram.com/adiradjapin" target="_blank" title="instagram adiradjapin"><i class="icon-instagram"></i></a></li>
 					</ul>
@@ -111,7 +111,7 @@
 				<h2>PIN GANCI</h2>
 				<div class="accent">
 					<span class="top"></span>
-					<a href="shop/pin-ganci/" class="bottom">
+					<a href="/shop/pin-ganci/" class="bottom">
 						show all
 					</a>
 				</div>
@@ -119,7 +119,7 @@
 			</div>
 			<div class="col-12 shop-label">
 				<h5>PIN Ganci</h5>
-				<a href="shop/pin-ganci/" class="btn btn-link">Show All</a>
+				<a href="/shop/pin-ganci/" class="btn btn-link">Show All</a>
 			</div>
 			<div class="col-lg-10 col-md-12 col-sm-12 shop-items">
 				<div class="row">
@@ -176,7 +176,7 @@
 				<h2>MUG</h2>
 				<div class="accent">
 					<span class="top"></span>
-					<a href="shop/mug/" class="bottom">
+					<a href="/shop/mug/" class="bottom">
 						show all
 					</a>
 				</div>
@@ -184,7 +184,7 @@
 			</div>
 			<div class="col-12 shop-label">
 				<h5>Mug</h5>
-				<a href="shop/mug/" class="btn btn-link">Show All</a>
+				<a href="/shop/mug/" class="btn btn-link">Show All</a>
 			</div>
 			<div class="col-lg-10 col-md-12 col-sm-12 shop-items">
 				<div class="row">
@@ -243,12 +243,12 @@
 		<p class="footer-menu left">
 			<a href="/">Home</a>
 			<span class="slash">/</span>
-			<a href="shop/">Shop</a>
+			<a href="/shop/">Shop</a>
 		</p>
 		<p class="footer-menu right">
-			<a href="about/">About Us</a>
+			<a href="/about/">About Us</a>
 			<span class="slash">/</span>
-			<a href="contact/">Contact Us</a>
+			<a href="/contact/">Contact Us</a>
 		</p>
 		<div class="footer-love">
 			<svg class="icon-bandung">
