--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Kami adalah produsen souvenir dan merchandise,  kami menawarkan harga yang terjangkau dengan kualitas terbaik.  Kami memproduksi PIN dan gantungan kunci.  Selain itu kami juga memproduksi MUG, Pakaian serta  berbagai souvenir &amp; merchandise lainnya.">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <script src="https://use.typekit.net/ppe4usu.js"></script>
+        <script src="http://use.typekit.net/ppe4usu.js"></script>
         <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
         <link rel="manifest" href="site.webmanifest">
