--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Kami adalah produsen souvenir dan merchandise,  kami menawarkan harga yang terjangkau dengan kualitas terbaik.  Kami memproduksi PIN dan gantungan kunci.  Selain itu kami juga memproduksi MUG, Pakaian serta  berbagai souvenir &amp; merchandise lainnya.">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <script src="https://use.typekit.net/ppe4usu.js"></script>
+        <script src="http://use.typekit.net/ppe4usu.js"></script>
         <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
         <link rel="manifest" href="site.webmanifest">
@@ -93,7 +93,7 @@
 				<span>BAHAN BAKU PIN and MATERIAL PIN</span>
 				<nav>
 					<ul>
-						<li class="shop"><a href="shop/" title="shop adiradjapin">shop</a></li>
+						<li class="shop"><a href="/shop/" title="shop adiradjapin">shop</a></li>
 						<li><a href="https://twitter.com/adiradjapin" target="_blank" title="twitter adiradjapin"><i class="icon-twitter"></i></a></li>
 						<li><a href="https://instagram.com/adiradjapin" target="_blank" title="instagram adiradjapin"><i class="icon-instagram"></i></a></li>
 					</ul>
@@ -107,7 +107,7 @@
 		<div class="text-hero">
 			<h1>Produsen souvenir and merchandise.</h1>
 			<a href="http://whatsapp.adiradjapin.com" class="btn btn-icon"><i class="icon-whatsapp"></i> Order Now</a>
-			<a href="shop/" class="btn btn-bg-red">shop the product &rsaquo;</a>
+			<a href="/shop/" class="btn btn-bg-red">shop the product &rsaquo;</a>
 		</div>
 	</div>
 
@@ -119,7 +119,7 @@
 		<div class="section-title">
 			<h3>Products</h3>
 			<span class="devider"></span>
-			<a href="shop/" class="caps">see all &rsaquo;</a>
+			<a href="/shop/" class="caps">see all &rsaquo;</a>
 		</div>
 		<div class="row">			
 			<div class="col-lg-3 col-sm-6">
@@ -214,7 +214,7 @@
 			</div>
 		</div>
 		<div class="cta">
-			<a href="shop/" class="btn btn-large btn-secondary">shop the product &rsaquo;</a>
+			<a href="/shop/" class="btn btn-large btn-secondary">shop the product &rsaquo;</a>
 		</div>
 	</div>
 
@@ -227,7 +227,7 @@
 			<div class="text-pad">
 				<h1 class="no-m">About AdiRadjaPin</h1>
 				<p>Kami adalah produsen souvenir dan merchandise, kami menawarkan harga yang terjangkau dengan kualitas terbaik.</p>
-				<a href="about/" class="btn btn-white-outline">Read Our Story &rsaquo;</a>
+				<a href="/about/" class="btn btn-white-outline">Read Our Story &rsaquo;</a>
 			</div>
 		</div>
 	</div>
@@ -324,12 +324,12 @@
 		<p class="footer-menu left">
 			<a href="/">Home</a>
 			<span class="slash">/</span>
-			<a href="shop/">Shop</a>
+			<a href="/shop/">Shop</a>
 		</p>
 		<p class="footer-menu right">
-			<a href="about/">About Us</a>
+			<a href="/about/">About Us</a>
 			<span class="slash">/</span>
-			<a href="contact/">Contact Us</a>
+			<a href="/contact/">Contact Us</a>
 		</p>
 		<div class="footer-love">
 			<svg class="icon-bandung">
